--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "commander": "^2.18.0",
     "css-to-xpath": "^0.1.0",
     "cucumber-expressions": "^6.0.1",
+    "debug": "^4.1.0",
+    "electron": "^3.0.4",
     "escape-string-regexp": "^1.0.3",
     "figures": "^2.0.0",
     "fn-args": "^3.0.0",
+    "fs-extra": "^7.0.0",
     "gherkin": "^5.1.0",
     "glob": "^6.0.1",
     "inquirer": "^0.11.0",
@@ -52,6 +55,7 @@
     "parse-function": "^5.2.10",
     "promise-retry": "^1.1.1",
     "requireg": "^0.1.8",
+    "sliced": "^1.0.1",
     "sprintf-js": "^1.1.1"
   },
   "devDependencies": {
