--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "inquirer": "^0.11.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.1.0",
+    "nightmare-download-manager": "^0.2.5",
     "parse-function": "^5.2.10",
     "promise-retry": "^1.1.1",
     "requireg": "^0.1.8",
